--- a/package.json
+++ b/package.json
@@ -2,13 +2,90 @@
   "name": "@select-four-ways/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~16.1.0",
+    "@angular-devkit/core": "~16.1.0",
+    "@angular-devkit/schematics": "~16.1.0",
+    "@angular-eslint/eslint-plugin": "~16.0.0",
+    "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/template-parser": "~16.0.0",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "~16.1.0",
+    "@angular/language-service": "~16.1.0",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/angular": "^16.5.5",
+    "@nx/cypress": "16.5.5",
+    "@nx/esbuild": "16.5.5",
+    "@nx/eslint-plugin": "16.5.5",
+    "@nx/jest": "16.5.5",
+    "@nx/js": "16.5.5",
+    "@nx/linter": "16.5.5",
+    "@nx/react": "^16.5.5",
+    "@nx/rollup": "16.5.5",
+    "@nx/vite": "16.5.5",
+    "@nx/web": "^16.5.5",
+    "@nx/workspace": "16.5.5",
+    "@rollup/plugin-url": "^7.0.0",
+    "@schematics/angular": "~16.1.0",
+    "@svgr/rollup": "^8.0.1",
+    "@swc/core": "~1.3.51",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@types/react-is": "18.2.1",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^12.16.0",
+    "esbuild": "^0.17.17",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~13.1.0",
+    "jsdom": "~22.1.0",
     "nx": "16.5.5",
-    "@nx/workspace": "16.5.5"
+    "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.1.3",
+    "verdaccio": "^5.0.4",
+    "vite": "~4.3.9",
+    "vite-tsconfig-paths": "~4.2.0",
+    "vitest": "~0.32.0"
+  },
+  "dependencies": {
+    "@angular/animations": "~16.1.0",
+    "@angular/common": "~16.1.0",
+    "@angular/compiler": "~16.1.0",
+    "@angular/core": "~16.1.0",
+    "@angular/forms": "~16.1.0",
+    "@angular/platform-browser": "~16.1.0",
+    "@angular/platform-browser-dynamic": "~16.1.0",
+    "@angular/router": "~16.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "rxjs": "~7.8.0",
+    "styled-components": "5.3.6",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
