--- a/nx.json
+++ b/nx.json
@@ -39,10 +39,18 @@
     },
     "@nx/react": {
       "application": {
+        "style": "styled-components",
+        "linter": "eslint",
+        "bundler": "vite",
         "babel": true
       },
       "library": {
+        "style": "styled-components",
+        "linter": "eslint",
         "unitTestRunner": "vitest"
+      },
+      "component": {
+        "style": "styled-components"
       }
     },
     "@nx/web:application": {
