--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler-cli": "~16.1.0",
     "@angular/language-service": "~16.1.0",
     "@babel/preset-react": "^7.14.5",
+    "@nrwl/express": "^16.5.5",
     "@nx/angular": "^16.5.5",
     "@nx/cypress": "16.5.5",
     "@nx/esbuild": "16.5.5",
@@ -30,6 +31,7 @@
     "@rollup/plugin-url": "^7.0.0",
     "@schematics/angular": "~16.1.0",
     "@svgr/rollup": "^8.0.1",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
@@ -77,6 +79,7 @@
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@swc/helpers": "~0.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
