feat: mvp for ng-select-app
Signed-off-by: Matthew Hippely <hippely@gmail.com>

--- a/libs/ng-select/project.json
+++ b/libs/ng-select/project.json
@@ -2,7 +2,7 @@
   "name": "ng-select",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/ng-select/src",
-  "prefix": "select-four-ways",
+  "prefix": "app",
   "tags": [],
   "projectType": "library",
   "targets": {
