--- a/libs/ng-select/.eslintrc.json
+++ b/libs/ng-select/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "selectFourWays",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "select-four-ways",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
